# python-app-bootstrap

./: .cspell.json  .env.sample  .gitignore  .mypy.ini  .pylintrc  .pythonrc  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.cspell-dictionaries/: english-extra.txt  python.txt
server/: entrypoint.sh  main.py
tests/: test_config.py  test_docker.py
