[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Martín Cepeda <mocepeda@uc.cl>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.94.1"

[tool.poetry.group.dev.dependencies]
mypy = "1.1.1"
pytest-asyncio = "0.20.3"
pytest = "7.2.2"
pytest-mock = "3.10.0"
pyclean = "2.7.0"
ruff = "0.0.267"
uvicorn = {extras = ["standard"], version = "0.22.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

## Tools

[tool.black]
target-version = ['py311']
line_length = 100
experimental-string-processing = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.isort]
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.mypy]
python_version = 3.11
plugins = "pydantic.mypy"

# Strict guidelines taken from https://github.com/pytorch/pytorch/blob/master/mypy-strict.ini
cache_dir = ".mypy_cache/strict"
strict_optional = true
hide_error_codes = false
show_column_numbers = true
warn_no_return = true
disallow_any_unimported = true

# Across versions of mypy, the flags toggled by --strict vary.  To ensure
# we have reproducible type check, we instead manually specify the flags
warn_unused_configs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
implicit_reexport = false
strict_equality = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = 10
testpaths = ["tests"]
asyncio_mode = "strict"

